upto 46 pages are corrected

--- a/tex-for-print/jss_consolidated1.tex
+++ b/tex-for-print/jss_consolidated1.tex
@@ -20,7 +20,7 @@ tanuH sivxVyA pArxkaqteVti BAvoV{\char'263}Mkura itiVyaRteV ||
 \begin{entry}
 \word{aMkusha}
 \meaning{\arthanonum{1. oMdu gurutu.}
-\ullekha{eMdiMtu nAlukx dikikxnoLaM aMkusha\break\-meMdoDe korxVMkAramaM barevudu (parxtiSAThx. 9-22);}\break 
+\ullekha{eMdiMtu nAlukx dikikxnoLaM aMkusha\-meMdoDe korxVMkAramaM barevudu (parxtiSAThx. 9-22);}
 \arthanonum{2. \hbox{hiDita}, hatoVTi, aMke.}
 \ullekha{asamAvivaNaR\-menalaMkushaM (shivaciM. 1-43).} 
 \arthanonum{3. Aneyanunx hatoVTiyalilxDalu savAraru baLa\-suva kabibxNada sAdhana.}
@@ -31,15 +31,14 @@ tanuH sivxVyA pArxkaqteVti BAvoV{\char'263}Mkura itiVyaRteV ||
 
 \begin{entry}
 \word{aMga}
-\meaning{\arthanonum{oDalu, deVha, diVkeSx hoMdida deVha}}
-\smallskip
+\meaning{\artha{deVha.}}
+\medskip
 \begin{shl}
 BakitxrUpeVNa pariNamaMti tadAyaM\\[3pt]
 jiVvoV aMga pada vAcoyxV Bavati | (shi.da.)
 \end{shl}
-
 \smallskip
-\newmeaning{\artha{deVha.} \ullekha{shivajanamxdalilx huTiTx liMgeYkayxrAgenalu tamamx aMgada meVle shivaliMgavirutitxralu anayxra hADi anayxrane hogaLi anayxra vasanava koMDADalu kamaR biDadu (savasaM. 1; basava. 29-107).} 
+\newmeaning{\ullekha{shivajanamxdalilx huTiTx liMgeYkayxrAgenalu tamamx aMgada meVle shivaliMgavirutitxralu anayxra hADi anayxrane hogaLi anayxra vasanava koMDADalu kamaR biDadu (savasaM. 1; basava. 29-107).} 
 \arthanonum{eMbalilx deVhada meVle iSaTxliMgavilalxdavara eMbathaRvide.}
 \artha{deVhada oMdu BAga; avayava:} \ullekha{shirasUsxrudavxyaM toVLagxLavu yugaM tAnaMgaveni\-paveY (viVsheYpu. 7-100-29).} \artha{tavxkukx athavA camaR eMbalilx aMga eMbudu camaRkekx anavxyisutatxde.} \ullekha{`aMgada koneyalilx liMga muMta\-lalxde saMgava mADanA sharaNanu' (savasaM. - 3; cenanxba. 305-96).}
 \artha{Atamx} \ullekha{liMgAMga sAmarasayx eMba padavu parashiva matutx Atamx ivugaLa sAmarasayxkekx anavxyisutatxde.}
@@ -1027,15 +1026,6 @@ nU\char'273\char'304\char'311MTute\char'273da cidaMgaMgaLAgi... (savasaM. 10; gu
 %\end{entry}
 
 \begin{entry}
-\word{aMtaraMgadaSaTxmadaMgaLu}
-\src{kA}
-\meaning{\arthanonum{aMtaraMgakekx saMbaMdhisi aSaTxmadanadaMtiruva eMTu bageya gavaRgaLu:}
-\ullekha{saMsithxta taqNiVkaqta vatiRni korxVdhini aticAriNi gaMdhacAriNi moVhini, vAsini iMtivu aMtaraMgadaSaTx\-madaMgaLu (karaNa. 666-12).}}
-\smallskip
-\newmeaning{\ni{aMtaraMgASaTxmadAH - aSwTx ca teV marAshacx - aSaTxmadAH, aMtaraMgasayx aSaTxmadAH - aMtaraMgASaTxmadAH}}
-\end{entry}
-
-\begin{entry}
 \word{aMtarasheYva}
 \meaning{\artha{sapatxsheYvaralilxya oMdu parxBeVda.}
 \ullekha{yoVgiyalalx; joVgiyalalx; sharxvaNanalalx; sanAyxsiyalalx; kALAmuKiyalalx; pAshupatiyalalx; I SaDudarushanaMgaLAcaraNeyalalx. sharaNanAcaraNe beVre AdisheYva, mahAsheYva, anusheYva, aMtarasheYva, parxvarasheYva, aMtayxsheYvaveMba I ArusheYvada niVtiyalalx... (savasaM. 11; toVMTada. 09-04).} \artha{sheYva diVkeSx\-yanunx hoMdida shUdarx.}
@@ -1096,7 +1086,7 @@ AkAshABayxMtarAkAshamaMtalaRkaSxyXM tadeVva hi ||
 \newmeaning{\ullekha{paratara parama samarasasavxrUpavAda tArakabarxhamxvu... aMtalaRkaSxyX\-veMdu bahilaRkaSxyXveMdu madhayxlakaSxyXveMdu... (savasaM. 11; SaNumxKa. - vacanasaMcaya).}}
 \smallskip
 \newmeaning{\ni{aMtalaRkaSxyXM - aMtaH vidayxmAnaM lakaSxyXM - aMta\-laRkaSxyXM}}
-\newmeaning{\arthanonum{(noVDi. bahilaRkaSxyX - udhavxRlakaSxyX)}}
+\newmeaning{\arthanonum{(noVDi. bahilaRkaSxyX - madhayxlakaSxyX)}}
 \end{entry}
 
 \begin{entry}
@@ -1942,11 +1932,7 @@ IshAnaM paMcamaM porxVkatxMmuKAni mama savaRshaH |
 \medskip
 \pauthor{(viV. sa.saM. 1. 26 - 27)}
 \smallskip
-\newmeaning{\ullekha{sadugxru sAvxmi shiSayxMge anugarxhava mADuvalilx... sadoyxVjAta vAma\-deVva aGoVra tatupxruSa IshAnaveMba... (savasaM. 5; akakxma. 393-119).}}
-\smallskip
-\newmeaning{\ni{aGoVraH - na GoVraH - aGoVraH (puM) na GoVraM - aGoVraM (napuM)}}
-\smallskip
-\newmeaning{\arthanonum{Ishavxrana sadoyxVjAta muMtAda paMca\-mUtiRgaLalilx oMdu. kADigege samAnavAda vaNaRda kAMti, rwdarxrUpa, nAlukx muKa matutx nAlukx toVLu, jaTAmukuTa\-diMda alaMkaqta, hanenxraDu kaNuNxgaLu, koVrehalulxgaLiMda BayaMkaravAda noVTa, huliya camaRdhAri, kAlegxjejxgaLiMda alaMkaqtavAda, elalx ABaraNagaLiMda dharisida, divayxgaMdhavanunx\break leVpisida shariVra, divayx puSapxgaLiMda alaMkaqtavAda, TaMka-\-shUlagaLiMda kUDida matutx varada-aBaya muderxgaLiMda BUSitanu aGoVra.}}
+\newmeaning{\ullekha{sadugxru sAvxmi shiSayxMge anugarxhava mADuvalilx... sadoyxVjAta vAma\-deVva aGoVra tatupxruSa IshAnaveMba... (savasaM. 5; akakxma. 393-119).} \artha{Ishavxrana sadoyxVjAta muMtAda paMca\-mUtiRgaLalilx oMdu. kADigege samAnavAda vaNaRda kAMti, rwdarxrUpa, nAlukx muKa matutx nAlukx toVLu, jaTAmukuTa\-diMda alaMkaqta, hanenxraDu kaNuNxgaLu, koVrehalulxgaLiMda BayaMkaravAda noVTa, huliya camaRdhAri, kAlegxjejxgaLiMda alaMkaqtavAda, elalx ABaraNagaLiMda dharisida, divayxgaMdhavanunx\break leVpisida shariVra, divayx puSapxgaLiMda alaMkaqtavAda, TaMka-\-shUlagaLiMda kUDida matutx varada-aBaya muderxgaLiMda BUSitanu aGoVra.}}
 \smallskip
 \begin{shl}
 BinAnxMjanasamaparxKayxmaGoVraM rwdarxrUpakamf ||\\[1pt]
@@ -1958,6 +1944,8 @@ TaMkashUlasamAyukatxM varadABayasaMyutamf |
 \end{shl}
 \medskip
 \pauthor{(vA.shu. A., 3. 50 - 53)}
+\newmeaning{\ni{aGoVraH - na GoVraH - aGoVraH (puM) na GoVraM - aGoVraM (napuM)}}
+\smallskip
 \newmeaning{\arthanonum{\SEE{paMcamuKagaLu}}}
 \end{entry}
 
@@ -2123,7 +2111,7 @@ acaRnApaRNa sApeVkASx vataRteV darxvayxshudadhxyeV |
 \begin{entry}
 \word{acacxparxsAdi}
 \meaning{\arthanonum{keVvala AhAra padAthaRgaLananxSeTxV alalx, tAnu anuBavisuva rUparasAdigaLelalxvanunx parashivanige apiRsi, avugaLanunx cidUrxpa, cidarxsa, itAyxdigaLeMba parxsAdavanAnxgi mADikoMDu BoVgisuvavanu. avana Bakitx inUnx vadhiRsi\break daMte, tananx deVheVMdirxyagaLanUnx parashivanigapiRsi avugaLanunx parxsAdadaMte baLasutAtxne.}}
-\newmeaning{\artha{vidhipUvaRkavAgi liMgApaRNeyAda padAthaRvanunx mAtarx sivxVkarisuvavanu; parishudadhxnAda parxsAdi.} \ullekha{acacxparxsAdi acacxparxsAdi eMbiri keVLirayAyx nicacxkekx nicacx husiva husigaLa kaMDevayAyx [nimamxlilx] (savasaM. 2; alalxma. 169-53); liMgava neneyade liMgApiRtava mADade anapiRtava koLaLxda acacxparxsAdiya toV\char'273\char'311\ badukisayAyx (savasaM. ?; cenanxba. 626-194).} \artha{guruvina upadeVshadaMte vidhuyxkatxvAda AcaraNegaLalilx toDagi, jaMgamapAdoVdakavanunx tapapxdaMte sivxVkarisuvavanu.} \ullekha{guru modalu AcarisuvaMtaha mamaRvanu tiLidu shivasaMsAkxravanu hoMdi naDe eMdu atimoVhanadiMda samasatxmamaRvanu tiLuhi hiDida varxtAcaraNege saMdu ilalxda hAge ...parxmathakaqpAkaTAkaSxdiMda naDedu hoVguvaru avare acacxparxsAdigaLu (savasaM. 3; cenanxba. 904-280); acacxparxsAdiyu guruvu boVdhisidaMtha AcaraNeya mamaRvanunx tiLidu varxtAcaraNege EnU tapupx taDegaLilalxda hAge AcarisutAtxne ...acacxparxsAdiyu vidhipUvaRkavAgi jaMgamada niriVkaSxNeyalilxyeV pAdoVdakavanunx tapapxde sivxVkarisutAtxne (shivakoV. 110-157).} \artha{liMgaparxsAdi, jaMgamaparxsAdi matutx samayaparxsAdi - I mUru parxkArada parxsAdigaLa tatatxvXvanunx oLagoMDavanu.} \ullekha{vAyxdhiyilalxdidaRDe liMgaparxsAdiyeMbe AdhiyilalxdidaRDe jaMgamaparxsAdiyeMbe lwkikava berasadidaRDe samayaparxsAdiyeMbe iMtiV tirxvidhasaMbaMdhiyAdade Atane acacxparxsAdiyeMbe kANA (savasaM. ?; cenanxba. 1642-603).}}
+\newmeaning{\artha{vidhipUvaRkavAgi liMgApaRNeyAda padAthaRvanunx mAtarx sivxVkarisuvavanu; parishudadhxnAda parxsAdi.} \ullekha{acacxparxsAdi acacxparxsAdi eMbiri keVLirayAyx nicacxkekx nicacx husiva husigaLa kaMDevayAyx [nimamxlilx] (savasaM. 2; alalxma. 169-53); liMgava neneyade liMgApiRtava mADade anapiRtava koLaLxda acacxparxsAdiya toV\char'273\char'311\ badukisayAyx (savasaM. 3; cenanxba. 626-194).} \artha{guruvina upadeVshadaMte vidhuyxkatxvAda AcaraNegaLalilx toDagi, jaMgamapAdoVdakavanunx tapapxdaMte sivxVkarisuvavanu.} \ullekha{guru modalu AcarisuvaMtaha mamaRvanu tiLidu shivasaMsAkxravanu hoMdi naDe eMdu atimoVhanadiMda samasatxmamaRvanu tiLuhi hiDida varxtAcaraNege saMdu ilalxda hAge ...parxmathakaqpAkaTAkaSxdiMda naDedu hoVguvaru avare acacxparxsAdigaLu (savasaM. 3; cenanxba. 904-280); acacxparxsAdiyu guruvu boVdhisidaMtha AcaraNeya mamaRvanunx tiLidu varxtAcaraNege EnU tapupx taDegaLilalxda hAge AcarisutAtxne ...acacxparxsAdiyu vidhipUvaRkavAgi jaMgamada niriVkaSxNeyalilxyeV pAdoVdakavanunx tapapxde sivxVkarisutAtxne (shivakoV. 110-157).} \artha{liMgaparxsAdi, jaMgamaparxsAdi matutx samayaparxsAdi - I mUru parxkArada parxsAdigaLa tatatxvXvanunx oLagoMDavanu.} \ullekha{vAyxdhiyilalxdidaRDe liMgaparxsAdiyeMbe AdhiyilalxdidaRDe jaMgamaparxsAdiyeMbe lwkikava berasadidaRDe samayaparxsAdiyeMbe iMtiV tirxvidhasaMbaMdhiyAdade Atane acacxparxsAdiyeMbe kANA (savasaM. 3; cenanxba. 1642-603).}}
 \end{entry}
 
 \smallskip
@@ -2240,9 +2228,7 @@ barxhamxviSuNxmaheVshavxrAdayoV manuSAyxMtAH ||
 \begin{entry}
 \word{ajAta}
 \src{va}
-\meaning{\artha{ajAtanAda liMgamayanAgiruvudu.}}
-\newmeaning{\artha{pArxNaliMgi athavA savARMgaliMgiyAdavanu savaRvanUnx shivanigapiRsutAtxne; hAgU tananx deVhavanunx shivana\break vAsasAthxnavanAnxgi mADutAtxnAdudariMda avanu ajAtamaya}
-\ullekha{vAyu hasidu ApoVshanava mADuvalilx... Ata\-neVtaralilxdadxrU ajAtamayaneMde... (savasaM. 8; manumu. 1017-345).}}
+\meaning{\arthanonum{barxha - shiva, savxyaMBU: parashiva :} \ullekha{jAti vijAtiyAdaDeVnu ajAtaMge sharaNeMdenanxdavanu AtaneV holeya (savasaM. 1; basava. 605-151); ayAyx niVvenanx karasathxlakekx baMdirAgi Anu tanupArxNa iSaTxliMgiyAdenu ...ajAtane kapilasidadhxmalilxkAjuRnayAyx Anu niVneMba kananxDavinenxVkayAyx (savasaM. 4; sidadhxrA. 82-25).}}
 \end{entry}
 
 \begin{entry}
@@ -2299,7 +2285,7 @@ aDaDxviBUtiyilalxdavara muKa holalx noVDalAgadu (savasaM. 1; basava. 87-25).}}
 \begin{entry}
 \word{atakayxR}
 \src{va}
-\meaning{\arthanonum{parashivananunx iMdirxyagaLa mUlaka tiLidu\-koLaLxlu sAdhayxvilalxvAdudariMda, kelavaru avanu idAdxneMdU, avanige iMthiMtha guNagaLive eMdU, takaRda (anumAnaveMba parxmANada) mUlaka toVrisikoDalu parxyatinxsidAdxre. Adare avara parxyatanxgaLelalx vayxthaR. EkeMdare parashivanu takaRkUkx nilukadavanu, atakayxR (9:275).} \ullekha{atakayxR? atakayxRna takaRmuKadalilx sAdhisideneMdaDe, nimamx takaRshAsatxrXkoMbude ele takiR garikA (savasaM. 19; saMga.a. 275-87)}}
+\meaning{\arthanonum{parashiva, parashivananunx iMdirxyagaLa mUlaka tiLidu\-koLaLxlu sAdhayxvilalxvAdudariMda, kelavaru avanu idAdxneMdU, avanige iMthiMtha guNagaLive eMdU, takaRda (anumAnaveMba parxmANada) mUlaka toVrisikoDalu parxyatinxsidAdxre. Adare avara parxyatanxgaLelalx vayxthaR. EkeMdare parashivanu takaRkUkx nilukadavanu, atakayxR (9:275).} \ullekha{atakayxR? atakayxRna takaRmuKadalilx sAdhisideneMdaDe, nimamx takaRshAsatxrXkoMbude ele takiR garikA (savasaM. 19; saMga.a. 275-87)}}
 \smallskip
 \newmeaning{\ni{atakayxRH takaRyitu yoVgayxH takayxRH na takayxRH atakayxRH}}
 \end{entry}
@@ -2328,9 +2314,7 @@ aDaDxviBUtiyilalxdavara muKa holalx noVDalAgadu (savasaM. 1; basava. 87-25).}}
 \begin{entry}
 \word{atAyxsharxma}
 \src{saM}
-\meaning{\arthanonum{(1) AsharxmadhamaR\-gaLanunx tayxjisiruva viVrasheYvaru Acarisuva oMdu visheVSa varxta. EkAMta\-dalilx\break kuLitu kutitxge matutx shirasasxnunx neVravAgi mADi, iMdirxya\-nigarxhavanunx mADi, tananx guruvige namasakxrisi haqdayakamala\break\-dalilx aciMtayxvU, avayxkatxvU, anaMtarUpavU Ada shiva\-nanunx dhAyxnisabeVku. alilx parameVshavxrananunx mukakxNaNxneV modalAda rUpagaLiMda dhAyxnisabeVku. aMtaha dhAyxnadiMda yAva yoVgige paramAtamxnu tAneMba BAvane uMTAgutatxdeyoV adu atAyxsharxma enisutatxde.}}
-\newmeaning{\artha{pAshupatavarxta, shAMBavavarxta, shiroVvarxta, Ishavxravarxta modalAda hesarugaLiMda atayxsharxmavarxtadalilx gurutisalAguvudu.}}
-\newmeaning{\arthanonum{swrasaMhiteyalilx -}}
+\meaning{\artha{AsharxmadhamaR\-gaLanunx tayxjisiruva viVrasheYvaru Acarisuva oMdu visheVSa varxta. EkAMta\-dalilx\break kuLitu kutitxge matutx shirasasxnunx neVravAgi mADi, iMdirxya\-nigarxhavanunx mADi, tananx guruvige namasakxrisi haqdayakamala\break\-dalilx aciMtayxvU, avayxkatxvU, anaMtarUpavU Ada shiva\-nanunx dhAyxnisabeVku. alilx parameVshavxrananunx mukakxNaNxneV modalAda rUpagaLiMda dhAyxnisabeVku. aMtaha dhAyxnadiMda yAva yoVgige paramAtamxnu tAneMba BAvane uMTAgutatxdeyoV adu atAyxsharxma enisutatxde.}} 
 \smallskip
 \begin{shl}
 vivikatxdeVsheV ca suKAsanasathxH shucisasxmagirxVvashiraH shariVraH |\\[1pt]
@@ -2351,13 +2335,7 @@ keYvalAyxthavaRkAlAginxrudorxVpaniSadiVritamf |
 \medskip
 \pauthor{(kirx. sA., BA - 2, pu. 93)}
 \smallskip
-\newmeaning{\ni{atAyxsharxmaH AshavxramaM atiVtayx vataRmAnaH - atAyxsharxmaH}}
-\end{entry}
-
-\begin{entry}
-\word{atAyxsharxmavarxta}
-\meaning{\arthanonum{(noVDi. atAyxsharxma)}}
-\smallskip
+\newmeaning{\artha{pAshupatavarxta, shAMBavavarxta, shiroVvarxta, Ishavxravarxta modalAda hesarugaLiMda atayxsharxmavarxtadalilx gurutisalAguvudu.}}
 \begin{shl}
 BasamxnoVdUdhxlanaM tiyaRkf tirxpuMDarxshivapUjanamf |\\[1pt]
 pArxdhAneyxVna purANAni parxvadaMti hi sAdaramf ||\\[1pt]
@@ -2368,9 +2346,11 @@ veVdAMteVSu samasetxVSu tatAsxrataramutatxmamf ||
 \pauthor{(kirx.sA., BA - 2, pu. 106)}
 \smallskip
 \newmeaning{\ni{atAyxsharxmavarxtaM - atAyxsharxmaH iti varxtaM - atAyxsharxmavarxtama}}
+\newmeaning{\ni{atAyxsharxmaH AshavxramaM atiVtayx vataRmAnaH - atAyxsharxmaH}}
 \smallskip
 \newmeaning{\arthanonum{\SEE{pAshupatayoVga}}}
 \end{entry}
+
 
 \begin{entry}
 \word{atAyxsharxmi}
@@ -2413,7 +2393,7 @@ ativaNARsharxmiV muMDiV pArxNaliMgAMgayoVgaBAkf |
 \word{atimahAshUnayx}
 \meaning{\artha{shiva : rUpa, AkAra, avayavagaLilalxdudu.}
 \artha{avayavavilalxdudu.}
-\ullekha{atimAgaR baLikA lwkika veYdika adhAyxtamxkaM\break atimAgiRka mAMtirxkaveMdu... (savasaM. 9; shAMtaviV. 1367-516); parAparavilalxdaMdu... shUnayx niHshUnayx mahA\-shUnayx atimahAshUnayx... (savasaM. 13; bAlasaM. 375-174).}}
+\ullekha{shUnayx niHshUnayx mahAshUnayx atimahAshUnayx eMba mahAGanavasutxvilalxdaMdu ...niraMjanAtiVta -nAgidaRnayayx ilalxdaMte namamx aparxmANakUDalasaMgamadeVvanu (savasaM. 13; bAlasaM. 1680-187);} \artha{savaRshUnayx nirAlaMba, savaRshUnayx} \ullekha{nAmarUpa kirxyegaLeVnU ilalxdaMdu savaRshUnayxnAgideRyalalx niVnu (toVMTava. 11-5-11).}}
 \smallskip
 \newmeaning{\ni{atimahAshUnayxM mahatf ca tatf shUnayxM ca mahAshUnayxM atishayitaM mahAshUnayxM yatf tatf atimahAshUnayxM}}
 \end{entry}
@@ -2661,21 +2641,6 @@ sidAdhxsana, padAmxsana, savxsitxkAsana, adhaR\-caMdArxsana, payaRMkAsana ivugaL
 \newmeaning{\ni{adhaRnAriVshavxtavxM. nAyARH adhaRH - adhARnAriV adhaRnAyARH IshavxraH - adhaRnAriVshavxraH adhaRnAriV\-shavxrasayx BavaH adhaRnAriVshavxratavxM}}
 \end{entry}
 
-%\begin{entry}
-%\word{adhAyxtimxka jiVvana}
-%\src{va}
-%\meaning{\arthanonum{AtamxsAkASxtAkxrakekx sAdhanavAda\break jiVvanakarxma.}}
-%\smallskip
-%\newmeaning{\ni{AdhAyxtimxka jiVvanaM. adhAyxtAmx Eva AdhAyxtimxkaM. athavA adhAyx\-tamxnaH idaM AdhAyxtimxkaM. AdhAyxtimxkaM ca tatf jiVvanaM ca - AdhAyxtimxkajiVvanaM}}
-%\end{entry}
-
-%\begin{entry}
-%\word{adhAyxtimxka tApa}
-%\meaning{\arthanonum{tApatarxyagaLalolxMdu; taninxMda tAneV uMTu\-mADikoMDa tApa (kaSaTx). tanage ogagxda AhAraseVvane, jiVNaRmADikoLuLxvudakikxMta hecicxna AhAra seVvane, ivu daqSaTx AdhAyxtimxka tApa; pApakaqtayxgaLanunx mADi adakekx takakx PalagaLanunx anuBavisuvudu adaqSaTx AdhAyxtimxka tApa.}}
-%\smallskip
-%\newmeaning{\ni{AdhAyxtimxkatApaH - AdhAyxtimxkasayx tApaH - AdhAyxtimxkatApaH}}
-%\end{entry}
-
 \begin{entry}
 \word{adhavx}
 \src{saM}
@@ -2746,7 +2711,8 @@ gurushushUrxSaNarataH shurxtavAnf viVtakalamxSaH ||
 \begin{entry}
 \word{adhideVvate}
 \src{va}
-\meaning{\arthanonum{parashivanu parxLayakAladalilx (athavA saqSiTxpUvaRdalilx) obabxneV idudx, avanige saqSiTx mADabeVkeMdu iceCxyAdAga avananunx niSakxla liMga athavA sathxla eMdu kareyalAgutatxde. A sithxtiyalilx shakitx avanalilx avayxkatx sithxtiyalilxrutatxde. Aga modalu avaniMda sadAshiva horabarutAtxne;\break avanige jAcnxnashakitxyu joteyalilxrutatxde. jAcnxnashakitxyoDa\-gUDida sadAshivaniMda icACxshakitxyoDagUDida shiva horabarutAtxne; ivariMda kirxyAshakitxyoDagUDida rudarx horabarutAtxne; ivariMda mahAlakiSxmXyeMba shakitxyoDa\-gUDida viSuNx horabarutAtxne; ivariMda sarasavxtiyeMba shakitx\-yoDagUDida barxhamx\- horabarutAtxne. ivariMda parxpaMcada elAlx carAcara vasutxgaLu huTuTxtatxve. (va.pa.koV); Adi anAdi adhideVvategaLu miVnaja roVmaja bilavxja capapxja QuSiyarugaLu modalAdanaMta barxhamxrilalxdaMdalilxMdatatxtatx EkaliMga obabxne sharaNa.}}
+\meaning{\arthanonum{parashivanu parxLayakAladalilx (athavA saqSiTxpUvaRdalilx) obabxneV idudx, avanige saqSiTx mADabeVkeMdu iceCxyAdAga avananunx niSakxla liMga athavA sathxla eMdu kareyalAgutatxde. A sithxtiyalilx shakitx avanalilx avayxkatx sithxtiyalilxrutatxde. Aga modalu avaniMda sadAshiva horabarutAtxne;\break avanige jAcnxnashakitxyu joteyalilxrutatxde. jAcnxnashakitxyoDa\-gUDida sadAshivaniMda icACxshakitxyoDagUDida shiva horabarutAtxne; ivariMda kirxyAshakitxyoDagUDida rudarx horabarutAtxne; ivariMda mahAlakiSxmXyeMba shakitxyoDa\-gUDida viSuNx horabarutAtxne; ivariMda sarasavxtiyeMba shakitx\-yoDagUDida barxhamx\- horabarutAtxne. ivariMda parxpaMcada elAlx carAcara vasutxgaLu huTuTxtatxve. (va.pa.koV)}
+\ullekha{Adi anAdi adhideVvategaLu miVnaja roVmaja ciTaTxja capapxja QuSiyarugaLu modalAdanaMta barxhamxrilalxdaMdalilxMdatatxtatx EkaliMga obabxne sharaNa (savasaM. 3; cenanxba. 978-318).}}
 \smallskip
 \newmeaning{\ni{adhideVvatAH adhishirxtayx vataRmAnAH deVvatAH adhi\-deVvatAH}}
 \end{entry}
@@ -2977,7 +2943,7 @@ yoV{\char'263}sw samacaRyeVninxtayxmanaMtaramitiVritamf ||
 \word{anapiRta}
 \meaning{\arthanonum{apiRsalu anahaRvAda vasutx; liMga, jaMgama muMtAdavarige niveVdisade iruvaMtha padAthaR; mAMsa madayxgaLu; kaLaLxtana, vaMcane, muMtAda aneYtika mAgaRgaLiMda duDidu taMda vasutxgaLU anapiRta.}
 \newline
-\ullekha{apiRtaveMbene... apiRta anapiRta niVne eMbe... (savasaM. 1; basava. 1023-275); aMgakekx AcAravAgi kaLegaLuLaLx\-nanxkakx... guheVshavxraliMga sAkiSxyAgi saMganabasavaNANx apiRtavilalxde koLadiru anapiRtava. (savasaM. 2; alalxma. 698-191); iSaTxliMga saMbaMdhavAda baLika kAyaguNa... apiRta anapiRtaveMba uBaya shaMke hiMgitutx... (savasaM. 3; cenanxba. 1014-334); EneMdenisada vasutx... nimamx apiRta anapiRtavAyitatxyAyx... (savasaM. 4; sidadhxrA. 353-101); tananx tA baMduda soVMkilalx\-duda vicArisi... apiRtava muTiTx anapiRtava jAgarx savxpanxdalilx maMtarxviparxruBalitApaRNa... (savasaM. 5;\break akakxmamx. 490-151); SaTasxthXla\-barxhamxvanoDagUDiheneMdaDadArige\break nilukuvudayAyx apiRta anapiRtaveMdu opapxkekx nuDiyabahu\-dalalxde (mishArxpaR. 677-7); aMga muTiTxdaDeVnu avaguNa\-vanapiRtaM liMgakalalxda heVyavelalxvu anapiRtaM (diVkASxboV. 127-19).}}
+\ullekha{apiRtaveMbene... apiRta anapiRta niVne eMbe... (savasaM. 1; basava. 1023-275); aMgakekx AcAravAgi kaLegaLuLaLx\-nanxkakx... guheVshavxraliMga sAkiSxyAgi saMganabasavaNANx apiRtavilalxde koLadiru anapiRtava. (savasaM. 2; alalxma. 698-191); iSaTxliMga saMbaMdhavAda baLika kAyaguNa... apiRta anapiRtaveMba uBaya shaMke hiMgitutx... (savasaM. 3; cenanxba. 1014-334); EneMdenisada vasutx... nimamx apiRta anapiRtavAyitatxyAyx... (savasaM. 4; sidadhxrA. 353-101); tananx tA baMduda soVMkilalx\-duda vicArisi... apiRtava muTiTx anapiRtava jAgarx savxpanxdalilx muTiTxbiTuTxdu BaritApaRNa... (savasaM. 5;\break akakxmamx. 490-151); SaTasxthXla\-barxhamxvanoDagUDiheneMdaDadArige\break nilukuvudayAyx apiRta anapiRtaveMdu opapxkekx nuDiyabahu\-dalalxde (mishArxpaR. 677-7); aMga muTiTxdaDeVnu avaguNa\-vanapiRtaM liMgakalalxda heVyavelalxvu anapiRtaM (diVkASxboV. 127-19).}}
 \medskip
 \newmeaning{\ni{(1) anapiRtaH (2) anapiRtaM\newline (1) na apiRtaH - anapiRtaH (paM)\newline (2) na piRtaM - anapiRtaM (napuM)}}
 \end{entry}
@@ -3360,7 +3326,7 @@ parxsAdapArxpAtxyX sheYvadiVkaSxyeYva nivataRteV ||
 \newmeaning{\ullekha{inunx AdimUla anAdimUlagaLigatatxtatxvAda... aneVkakoVTi anAdipashugaLu, aneVkakoVTi anAdipAshaMgaLeMba... (savasaM. 13; bAlasaM. 225-71).}}
 \smallskip
 \newmeaning{\ni{anAdipAshaH anAdishacx asw pAshashacx - anAdipAshaH}}
-\newmeaning{\arthanonum{(noVDi. aNava mala}}
+\newmeaning{\arthanonum{(noVDi. ANavamala}}
 \end{entry}
 
 \begin{entry}
@@ -3495,13 +3461,11 @@ iti nishicxtavAnf yoV{\char'263}sw soV{\char'263}nAdisheYvamucayxteV ||
 \newmeaning{\ni{anAdisaMsidadhxH samiVciVnatayAsidadhxH - saMsidadhxH anAdishacx asw saMsidadhxshacx - anAdisaMsidadhxH}}
 \end{entry}
 
-%raghu, 42
-
 \begin{entry}
 \word{anAmika}
 \src{va}
-\meaning{\arthanonum{yAvudeV sAvxthaR Aseyilalxde athavA nAneMba BAvavilalxde iruvudu.}
-\ullekha{iTiTxya haNaNx nari tiMdu saqSiTx tirugi\-tetxMbaMte... anAmikaroDanADi gelivudeVnu... (savasaM. 1; basava. 577-144); mADuva Bakatxnalilx kUDidadx jaMgamavu... arasana hesarinalilx kareyisikoMDa anAmikanaMte... (savasaM. 2; alalxma. 1461-433); arasana hesariTaTx anAmikanaMte...\break (savasaM. 3; cenanxba. 401-126); moVLima-siVmeya miVrida saMbaMdhiya... gArxmada miVrida nAmikana... (savasaM. 4; sidadhxrA. 1310-378); anAcAra aLavaTuTx guruva\-nariyabeVku... anAmikanAgi liMgava garxhisabeVku. (savasaM. 5).}}
+\meaning{\arthanonum{1. hesarilalxde iruvavanu, 2. uMgurada beraLu. yAvudeV sAvxthaR Aseyilalxde athavA nAneMba BAvavilalxde iruvudu.}
+\ullekha{iTiTxya haNaNx nari tiMdu saqSiTx tirugi\-tetxMbaMte... anAmikaroDanADi gelivudeVnu... (savasaM. 1; basava. 577-144); mADuva Bakatxnalilx kUDidadx jaMgamavu... arasana hesarinalilx kareyisikoMDa anAmikanaMte... (savasaM. 2; alalxma. 1461-433); arasana hesariTaTx anAmikanaMte...\break (savasaM. 3; cenanxba. 401-126); siVmeya miVrida saMbaMdhiya... gArxmada miVrida nAmikana... (savasaM. 4; sidadhxrA. 1310-378); anAcAra aLavaTuTx guruva\-nariyabeVku... anAmikanAgi liMgava garxhisabeVku. (savasaM. 5).}}
 \smallskip
 \newmeaning{\ni{(1) anAmikaH (2) anAmikA\newline (1) na vidayxteV nAma asayx iti anAmikaH\newline (2) na vidayxteV nAma asayxH iti anAmikA}}
 \end{entry}
@@ -3511,8 +3475,8 @@ iti nishicxtavAnf yoV{\char'263}sw soV{\char'263}nAdisheYvamucayxteV ||
 \begin{entry}
 \word{anAyata}
 \src{va}
-\meaning{\arthanonum{manabaMdaMte naDeyuvudu:}
-\ullekha{pUjisi\break keLayiMke iLuhaladeVno ?... anAgata (anAyata?) pUjeya mADaladeVnU?... (savasaM. 2; alalxma. 1352-399); BakatxM\-gAgali, jaMgamakAkxgali... sadAcAravuLaLxvarige anAyata hodadx\-bAradu... (savasaM. 3; cenanxba. 183-54); Ayata sAvxyata\break saninxhitaveMdu nuDiva... anAyatada heVsikeyaneVnaMbe\break\-nayAyx ?... (savasaM. 6; Adayayx. 828-250); cidAnaMda\-suKamayavapapx vasutxviMge... anAyatavapapx iMdirxya\-vikArava mANisayayx enanx taMde... (savasaM. 11; toVMTasi.\break 151-70); shirxVguruve kataRneMdu parxsAda koMba... I parxsAdakekx ayata anAyataveMba... (savasaM. 8; maDimA. 749-276).}}
+\meaning{\arthanonum{anucita naDe. (viV.pA.koV)}
+\ullekha{pUjisi keLayiMke iLuhaladeVno ?... anAgata (anAyata?) pUjeya mADaladeVnU?... (savasaM. 2; alalxma. 1352-399); BakatxM\-gAgali, jaMgamakAkxgali... sadAcAravuLaLxvarige anAyata hodadx\-bAradu... (savasaM. 3; cenanxba. 183-54); Ayata sAvxyata saninxhitaveMdu nuDiva... anAyatada heVsikeyaneVnaMbe\-nayAyx ?... (savasaM. 6; Adayayx. 828-250); cidAnaMda\-suKamayavapapx vasutxviMge... anAyatavapapx iMdirxya\-vikArava mANisayayx enanx taMde... (savasaM. 11; toVMTasi. 151-70); shirxVguruve kataRneMdu parxsAda koMba... I parxsAdakekx ayata anAyataveMba... (savasaM. 8; maDimA. 749-276).}}
 \smallskip
 \newmeaning{\ni{anAyataH AyataH na Bavati iti anAyataH}}
 \end{entry}
@@ -3521,7 +3485,7 @@ iti nishicxtavAnf yoV{\char'263}sw soV{\char'263}nAdisheYvamucayxteV ||
 
 \begin{entry}
 \word{anAhata}
-\meaning{\arthanonum{yoVgashAsatxrXdalilx parxsidadhxvAgiruva Aru bageya cakarxgaLalilx oMdu; haqdayasAthxnadalilx suSumAnxnADiya madhayx\-BAgadalilxruva, dAvxdashadaLakamalada AkAradalilxruvudeMdu tiLiyalAda oMdu cakarx: ililxruva dAvxdashadaLagaLalilx ka, Ka, ga, Ga, kna, ca, Ca, ja, Ja, cna, Ta matutx Tha eMba hanenxraDu akaSxragaLive. idara adhideVvate Ishavxra. AdhAra, sAvxdhi\-SAThxna, maNipUraka, anAhata, vishudidhx matutx AjAcnx-eMba Aru cakarxgaLalUlx shakitxgaLige kAraNavAgiruva parxNavAkaSxragaLidudx, anAhatacakarxdalilx `vA' kAravu nelaside. miduLinalAlxguva calanegaLu I parxNavAkaSxragaLa mUlaka shariVrada sAnxyugaLalilx saMcarisutatxve. liMganiSeThxyuLaLxvaru I bageya shakitxgaLanunx liMgamuKavanAnxgi mADi tamamx kirxyegaLanunx mADutAtxre. idanunx SaTasxthXlAcaraNe, aSATxvaraNa-ivugaLiMda sAdhi\break\-sutAtxre. I karxmadiMdAgi anAhatacakarxdalilx jaMgama\break\-liMgavu parxkaTagoLuLxtatxde.}
+\meaning{\arthanonum{taMtarxshAsatxrXdalilx heVLalAgiruva Aru bageya cakarxgaLalilx oMdu; haqdayasAthxnadalilx suSumAnxnADiya madhayx\-BAgadalilxruva, dAvxdashadaLakamalada AkAradalilxruvudeMdu tiLiyalAda oMdu cakarx: ililxruva dAvxdashadaLagaLalilx ka, Ka, ga, Ga, kna, ca, Ca, ja, Ja, cna, Ta matutx Tha eMba hanenxraDu akaSxragaLive. idara adhideVvate Ishavxra. AdhAra, sAvxdhi\-SAThxna, maNipUraka, anAhata, vishudidhx matutx AjAcnx-eMba Aru cakarxgaLalUlx shakitxgaLige kAraNavAgiruva parxNavAkaSxragaLidudx, anAhatacakarxdalilx `vA' kAravu nelaside. miduLinalAlxguva calanegaLu I parxNavAkaSxragaLa mUlaka shariVrada sAnxyugaLalilx saMcarisutatxve. liMganiSeThxyuLaLxvaru I bageya shakitxgaLanunx liMgamuKavanAnxgi mADi tamamx kirxyegaLanunx mADutAtxre. idanunx SaTasxthXlAcaraNe, aSATxvaraNa-ivugaLiMda sAdhi\break\-sutAtxre. I karxmadiMdAgi anAhatacakarxdalilx jaMgama\break\-liMgavu parxkaTagoLuLxtatxde. (viV.pA.koV)}
 \ullekha{savARvadhAni samayaparxsAdi\break noVDayAyx... ayAyx, anAhataMgaLa munanxve iraliVya... (savasaM. 1; basava. 1388-384); savARMga liMgasAvxyatavAda sharaNaMge... anAhatadalilx nirUpa sAvxyata... (savasaM. 2; alalxma. 237-72); pUvaRjanamxva nivaqtitxya mADi shirxVgurukarakamaladalilx janisida... AdhAra, sAvxdhiSAThxna, maNipUraka anAhata,\break vishudidhx, AjecnxVya... (savasaM. 3; cenanxba. 1347-476); AdinirALa, madhayx\-nirALa, UdharxvXnirALa aMte ninanx... ayayx ninanx anAhata paTaTxNadalilx... (savasaM. 4; sidadhxrA. 159-46); sAthxna\-BeVda saMshaya... AdhAra sAvxdiSaTx maNipUraka anAhata vishudidhx\break Ajecnx... (savasaM. 5; akakxma. 404-122); AdhAradalilx nakAra ...liMgoVdadhxraNeyalilx tadavxNaRMgaLeMteMdoDe ...sAlAda kaKa\-gaGakna caCajaJacna TaTha veMbiveY lasadfdAvxdashavanAhata ...anA\-hata haqdisAthxnadalilx beVkAda BUtaveV vAyu SaTokxVNeyiMtA kamalavesaLu hanenxraDakaSxraMgaLinAnx kaThadAvxdashaM kuMkumada vaNaR\-viVshaM tAneyadhideYvavu (viVsheYpu. 7-106-4, 11);}}
 \end{entry}
 
@@ -3554,7 +3518,7 @@ PalAneyxVtAni pUvARdidalasatxsAyxtamxnoV jaguH ||
 \begin{entry}
 \word{anAhatabarxhamx}
 \src{va}
-\meaning{\arthanonum{haqdagxtavAda parabarxhamx:}
+\meaning{\arthanonum{haqdayasAthxnadalilx iruva parabarxhamx. (viV.pA.koV)}
 \ullekha{AdayxkaSxrada BeVdava\-narideneMba yoVgi niV keVLA... anAhatabarxhamxdalilx AMdoVLanu. (savasaM. 4; sidadhxrA. 152-45).}}
 \smallskip
 \newmeaning{\ni{anAhataM ca tatf barxhamxca - anAhatabarxhamx (na)}}
@@ -3563,8 +3527,8 @@ PalAneyxVtAni pUvARdidalasatxsAyxtamxnoV jaguH ||
 \begin{entry}
 \word{animiSa}
 \src{va}
-\meaning{\artha{kaNeNxvegaLanunx alugisade iSaTxliMgavanenxV daqSiTxsi noVDutitxruvavanu; liMgadalelxV neTaTx noVTavuLaLxvanu:}}
-\newmeaning{\artha{alalxmaparxBuvige iSaTxliMgavanunx karuNisida obabx sharaNa.}
+\meaning{\artha{deVvate, kaNeNxvegaLanunx alugisade iSaTxliMgavanenxV daqSiTxsi noVDutitxruvavanu; liMgadalelxV neTaTx noVTavuLaLxvanu:}}
+\newmeaning{\artha{alalxmaparxBuvige iSaTxliMgavanunx karuNisida guru. (viV.pA,koV)}
 \ullekha{enanx karasathxlada liMgava animiSa koMDanu... animiSana karasathxlada liMgava niVvu koMDiri... (savasaM. 1; basava. 1080-291); husiyilalxda gUDinoLage... basava cananxbasava animiSa guheVshavxra sahita... (savasaM. 2; alalxma. 1623-482); aMga\break saMsAra\-virahadoLu savedu... animiSaparxBuviMge basavaNaNx guru\-vAda kAraNa... (savasaM. 3; cenanxba. 872-262); maha\-vanoDagUDida tanu ninanxkaSxratarxyavu basavaNANx... samate\break sAyujayxda animiSAkaSxradiMda... (savasaM. 4; sidadhxrA.\break 885-249); animiSa\-nalalxmayayx, maruLashaMkarayayx... (savasaM. 5; akakxma. 19-07).}}
 \smallskip
 \newmeaning{\ni{animiSaH, animiSaM (na). nimiSaH na Bavati iti ani\-miSaH, animiSaM}}
@@ -3582,7 +3546,7 @@ PalAneyxVtAni pUvARdidalasatxsAyxtamxnoV jaguH ||
 \begin{entry}
 \word{animiSadaqSiTx}
 \src{va}
-\meaning{\arthanonum{kaNuNxrepepxgaLanunx alugisade iSaTx\-liMga\-vanenxV noVDutitxruva noVTa: liMgadalelxV neTiTxruva daqSiTx:}
+\meaning{\arthanonum{neTaTxdaqSiTx; kaNuNxrepepxgaLanunx alugisade iSaTx\-liMga\-vanenxV noVDutitxruva noVTa: liMgadalelxV neTiTxruva daqSiTx: (viV.pA.koV)}
 \ullekha{karasathxladalilx liMgasAthxpanavAda baLika liMgadalilx animiSa\-daqSiTxyAgabeVku (savasaM. 3; cenanxba. 368-121); iSaTx\-liMgamaM karadalilx piDidu pUjeyaM mADi A liMgamaM animiSadaqSiTx\-yiMda noVDuvudiVga liMgada noVTa (savasaM. 11; GanaliM. 744-364).}}
 \smallskip
 \newmeaning{\ni{animiSadaqSiTxH nimiSaH na Bavati iti animiSA, animiSA daqSiTxH yasayx saH - animiSadaqSiTxH}}
@@ -3591,7 +3555,7 @@ PalAneyxVtAni pUvARdidalasatxsAyxtamxnoV jaguH ||
 \begin{entry}
 \word{animiSasAthxna}
 \src{va}
-\meaning{\arthanonum{repepxgaLanunx alugisade nishacxlavAda sithxti;\break samAdhisithxti:}
+\meaning{\arthanonum{repepxgaLanunx alugisade nishacxlavAda sithxti;\break samAdhisithxti: (viV.pA.koV)}
 \ullekha{oMda\char'273lilx OMkAra Bavisitutx ...A\char'273\char'273lilx avayxya animiSasAthxnava kaMDe miV\char'273\char'236de {mUvatAtx\char'273} kapilasidadhxmalilx\-kAjuRnaneMba tatatxvXmasi saMgamadalilx saMyoVgiyAde (savasaM. 4; sidadhxrA. 282-78).}}
 \smallskip
 \newmeaning{\ni{animiSasAthxnaM. animiSaM ca tatf sAthxnaM ca - ani\-miSasAthxnaM}}
@@ -3600,15 +3564,16 @@ PalAneyxVtAni pUvARdidalasatxsAyxtamxnoV jaguH ||
 \begin{entry}
 \word{animiSAkaSxra}
 \src{va}
-\meaning{\arthanonum{shAshavxtavAda niraMtara daqSiTx:}
+\meaning{\arthanonum{deYvikavAda akaSxra. (viV.pA.koV):}
 \ullekha{basavaNaNxneV Bakitx mukitxge mUlavu basavaNaNxna nenedu animiSAkaSxradiMda basava\-padavAyitetxY (savasaM. 4; sidadhxrA. 241-67).}}
 \smallskip
 \newmeaning{\ni{animiSAkaSxraH kaSxraH na Bavati iti akaSxraH, animiSashacx asw akaSxrashacx - animiSAkaSxraH}}
+\newmeaning{\arthanonum{(noVDi. animiSa)}}
 \end{entry}
 
 \begin{entry}
 \word{anilAMga}
-\meaning{\arthanonum{AtAmxMta muMtAda SaDaMgagaLalilx oMdu. pArxNaliMgisathxla. anilAMgadalilx (pArxNaliMgisathxladalilx) manoVhasatxdiMda jaMgamaliMgAcaRne mADalAgutatxde.}}
+\meaning{\arthanonum{AtAmxMta muMtAda SaDaMgagaLalilx oMdu. pArxNaliMgisathxla. ani\-lAMgadalilx (pArxNaliMgisathxladalilx) manoVhasatxdiMda jaMgamaliMgAcaRne mADalAgutatxde.}}
 \smallskip
 \begin{shl}
 anilAMgaM manoVhasatxM caraliMgAcaRneV ratamf ||\\[1pt]
@@ -3616,7 +3581,7 @@ pArxNaliMgisathxlaM sAkASxditAyxhuH shivadhAmiRkAH |
 \end{shl}
 \medskip
 \pauthor{(a.sU., 6, 37-38)}
-\newmeaning{\ullekha{enanx savARMgavelalxvU liMgavAda parikarxmaveMteMdaDe... anilAMgadalilx manoVhasatxdiMda susapxshaRnadarxvayxvanu... (savasaM. 3; cenanxba. 1055-352).}}
+\newmeaning{\ullekha{enanx savARMgavelalxvU liMgavAda parikarxmaveMteMdaDe... ani\-lAMgadalilx manoVhasatxdiMda susapxshaRnadarxvayxvanu... (savasaM. 3; cenanxba. 1055-352).}}
 \smallskip
 \newmeaning{\ni{anilAMgaM. anilaH iva vataRmAnaM aMgaM - ani\-lAMgaM. anilAMgaH (puM), anilaH iva aMgaM yasayx saH anilAMgaH}}
 \end{entry}
@@ -6778,6 +6743,15 @@ sharaNara vacana.}}
 \end{entry}
 
 \begin{entry}
+\word{aSaTxmadaMgaLu}
+\src{kA}
+\meaning{\arthanonum{aMtaraMgakekx saMbaMdhisi aSaTxmadanadaMtiruva eMTu bageya gavaRgaLu:}
+\ullekha{saMsithxta taqNiVkaqta vatiRni korxVdhini aticAriNi gaMdhacAriNi moVhini, vAsini iMtivu aMtaraMgadaSaTx\-madaMgaLu (karaNa. 666-12).}}
+\smallskip
+\newmeaning{\ni{aMtaraMgASaTxmadAH - aSwTx ca teV marAshacx - aSaTxmadAH, aMtaraMgasayx aSaTxmadAH - aMtaraMgASaTxmadAH}}
+\end{entry}
+
+\begin{entry}
 \word{aSaTxmadaLa}
 \meaning{\arthanonum{aSaTxdaLa:}
 \ullekha{haqdayaM manaH pArxNavA keYyiMde\break GanaliMgamaM piDidanAhatASaTxmadaLada pUjeyaM mADutipaR anaGaneV pArxNaliMgiya BakatxnapapxneY (viVsheYpu. 8-128-28).}}
@@ -9501,6 +9475,21 @@ liMgaM niriVkaSxmANaH sanf liMgapArxNiV sadA Bava ||
 \pauthor{(kA.A., kirx.pA., 1. 104 - 105)}
 \smallskip
 \newmeaning{\ni{AtAmxnaM adhishirxtayx adhAyxtAmx (adhAyxtamxnf - shabadx) adhAyxtamxnaH diVkASx - adhAyxtamxdiVkASx}}
+\end{entry}
+
+\begin{entry}
+\word{AdhAyxtimxka jiVvana}
+\src{va}
+\meaning{\arthanonum{AtamxsAkASxtAkxrakekx sAdhanavAda\break jiVvanakarxma.}}
+\smallskip
+\newmeaning{\ni{AdhAyxtimxka jiVvanaM. adhAyxtAmx Eva AdhAyxtimxkaM. athavA adhAyx\-tamxnaH idaM AdhAyxtimxkaM. AdhAyxtimxkaM ca tatf jiVvanaM ca - AdhAyxtimxkajiVvanaM}}
+\end{entry}
+
+\begin{entry}
+\word{AdhAyxtimxka tApa}
+\meaning{\arthanonum{tApatarxyagaLalolxMdu; taninxMda tAneV uMTu\-mADikoMDa tApa (kaSaTx). tanage ogagxda AhAraseVvane, jiVNaRmADikoLuLxvudakikxMta hecicxna AhAra seVvane, ivu daqSaTx AdhAyxtimxka tApa; pApakaqtayxgaLanunx mADi adakekx takakx PalagaLanunx anuBavisuvudu adaqSaTx AdhAyxtimxka tApa.}}
+\smallskip
+\newmeaning{\ni{AdhAyxtimxkatApaH - AdhAyxtimxkasayx tApaH - AdhAyxtimxkatApaH}}
 \end{entry}
 
 \begin{entry}
