upto 1595 padanishpattis are added

--- a/tex-for-print/jss_consolidated1.tex
+++ b/tex-for-print/jss_consolidated1.tex
@@ -23909,8 +23909,6 @@ tatatx\char'273da\char'273\char'236veM parxsananxshaMkaraliMgA ||
   doDaDxdu mADi adakikxMta hecicxnadAda AdhAyxtimxka dheyxVyavanunx ciMtisagoDuvudilalx.}}
 \end{entry}
 
-%raghu, padanishpatti from here, point 1591, page no. 78, paribasika1.pdf
-
 \begin{entry}
 \word{citatxshudidx}
 \src{saM}
@@ -23923,6 +23921,7 @@ citatxshudAdhxyX BaveVdaBxkitxH... |
 \medskip
 \pauthor{(kA.A., kirx.pA., 1. 134)}
 \newmeaning{\ullekha{mukatxyXMganege citatxshudidhxyapapx vaqkaSxva... (savasaM. 4; sidadhxrA. 905-255).}}
+\newmeaning{\ni{citatxshudidhxH, citatxsayx shudidhxH - citatxshudidhxH}}
 \end{entry}
 
 \begin{entry}
@@ -23950,24 +23949,28 @@ gaMdhaparxsAdaM sadaBxkAtxyX citatxhasetxVna cApaRyeVtf ||
 \pauthor{(kA.A., kirx.pA., 7.60)}
 \newmeaning{\SEE{ahaMkArahasatx}}
 \newmeaning{\ullekha{enanx savAMRgavelalxvU liMgavAda parikarxmaveMteMdaDe... BUmayxMga\-dalilx sucitatxhasatxdiMda sugaMdhadarxvayxvanu... (savasaM.\break 3; cenanxba. 1055-352); nirAmayaveMba Bakatxna aMga\-dalilx... sucitatxhasatx, subudidhxhasatx, nirahaMkArahasatx... (savasaM. 10; jakakxNa. 1561-685); ayayx, tArakAkaqti, nakAra\-parxNama,\break veVNunAda... AdhAracakarx, piVtavaNaR, Bakitxsathxla, sUthxlatanu, sucitatx\-hasatx... (savasaM. 10; gurusi. 747-433); guru\-niraMjana paramakaTAkaSxmaNiyenage... enanx sucitatxhasatxva koLa\-baMda noVDA... (savasaM. 12; deVshikeVM. 82-26); aKaMDa\-joyxVtimaRyavAgi paramoVMkAraparxNavada... A parxNavada tArakasavxrUpadalilx sucitatxhasatx huTiTxtutx noVDA... (savasaM. 13; bAlasaM. 502-235).}}
+\newmeaning{\ni{citatxhasatxH, citatxM Eva hasatxH - citatxhasatxH}}
 \end{entry}
 
 \begin{entry}
 \word{citapxda}
 \meaning{\arthanonum{paramapadavi; mukitx:}
 \ullekha{A citapxdaveV tuyaRmenikukx\break yoVcisi tiLi keYvalayxmadakukx (parate. 364-9); gurumuKadiM\-dogeda niravayAnaMda parxsAdamUtiRge... pariyiMdeseva tanu mana BAvAdi sacicxtapxdAthaRvanu... (savasaM. 12; deVshikeVM. 371-113); kuMDaliya muKadalilx pArxNanivAsiyAgipapx... shUnayxsAthxnada hUvina parimaLada citapxdAMbuva dharisi... (savasaM. 6; Adayayx. 886-267).}}
+\newmeaning{\ni{citapxdaM, citaH padaM - citapxdaM}}
 \end{entry}
 
 \begin{entry}
 \word{citapxrXkAsha}
 \meaning{\arthanonum{divayxparxBe; mUlacitutx:}
 \ullekha{A cidAtamxna madhayxdali\-papxnA citapxrXkAsha savxrUpamapapx parashivanu (savasaM. 4; sidadhxrA.\break 243-68); cinamxya cidUrxpa citapxrXkAshavilalxdatatxtatx ...kalA\-parxNavavAgidadxnayayx namamx aparxmANa kUDalasaMgamadeVva (savasaM. 13; bAlasaM. 1693-193); mUlacitutx para\-mAtamxna parxkAshaveMdu AgiMdAgegx vacanagaLalilx vaNiRsalapxDu\-vuduMTu... adanunx citapxrXkAshaveMtalU kareyutAtxre (shivAkoV. 19-15).}}
+\newmeaning{\ni{citapxrXkAshaH, citaH parxkAshaH - citapxrXkAshaH}}
 \end{entry}
 
 \begin{entry}
 \word{citapxrXNama}
 \meaning{\arthanonum{shudadhxparxNavadalilx parxkaTavAda sacicxdAnaMda savxrUpa\-vAda OMkAra:}
 \ullekha{A citutx sacicxdAnaMda savxrUpuLaLxdAgi citapxrXNama\-veMdenisikoLuLxtatxde (shivAkoV. 179-133); suparxBAkaLe\-yiMda citapxrXNama udaya... (savasaM. 9; apapxNaNx. 1047-326); cinamxya cidUrxpa citapxrXkAsha cidAnaMda... cidaGxna citapxrXNama cidaGxnAtamx cidaGxnaliMga... (savasaM. 14; heVmaga. 974-453).}}
+\newmeaning{\ni{citapxrXNava - citapxrXNavaH, citaH paraNavaH athavA citf Eva parxNavaH - citapxrXNavaH}}
 \end{entry}
 
 \begin{entry}
@@ -23975,6 +23978,8 @@ gaMdhaparxsAdaM sadaBxkAtxyX citatxhasetxVna cApaRyeVtf ||
 \meaning{\arthanonum{citapxrXNama:}
 \ullekha{parashivana citetx citapxrXNavamAyatxda\char'273\char'311Mdaluru nAda biMdu kaLegaLf puTiTxduvu (cebapu. 60-19); \hbox{inunx} AdimUla anAdimUlagaLigatatxtatxvAda... mahAjoyxVtiparxNava, citapxrXNava, cidAnaMdajoyxVtiparxNava... (savasaM. 13; bAlasaM. 225-71); Adi anAdiyiMdatatxtatxlAda A mahAGana barxhamxna...\break mAdeVvarariyada asama citapxrXNavaliMgava.... (savasaM. 12;\break deVshikeVM. 45-13).}}
 \end{entry}
+
+%raghu, padanishpatti point no. 1596, page 78
 
 \begin{entry}
 \word{citapxrXBAMgane}
