upto 70 pages are corrected

--- a/tex-for-print/jss_consolidated1.tex
+++ b/tex-for-print/jss_consolidated1.tex
@@ -6001,13 +6001,11 @@ sathxlaBeVdAH parxkiVtayxRMteV paMcAshatf sapatx cAdhunA ||
 \newmeaning{\ni{avAMtarasathxlAni avAMtarANi ca tAni sathxlAni -\break avAMtarasathxlAni}}
 \end{entry}
 
-%raghu, gv 71
-
 \begin{entry}
 \word{avAkfparxNava}
 \src{saM}
 \meaning{\arthanonum{aidu vidha parxNavagaLalilx oMdu. vAgUrxpada idu shiva\-rUpiyU, tuyARtiVtAvasethxya sAthxyi\-rUpadudx. adu
-teYladAreyaMtehAgU niraMtaravAda GaMTA\-ninAdadaMtide.}}
+teYladAreyaMte hAgU niraMtaravAda GaMTA\-ninAdadaMtide.}}
 \smallskip
 \begin{shl}
 avAgajxM paMcamaM vidAyxtf paMcaparxNavaBeVdakamf |\\
@@ -6023,11 +6021,12 @@ avAgajxM parxNavasAyxgarxM yasatxM veVda sa veVdavitf ||
 \newmeaning{\arthanonum{\SEE{parxNava}}}
 \end{entry}
 
+%raghu, gv 76
 %raghu, format from here, gv 76
 
 \begin{entry}
-\word{avAcayxparxNama}
-\meaning{\arthanonum{parxNavagaLalilx oMdu; nAda, biMdu matutx kaLe-ivu mUru kUDidAga uMTAguva parxNava:}
+\word{avAgacxparxNama}
+\meaning{\arthanonum{parxNavagaLalilx oMdu; nAda, biMdu matutx kaLe-ivu mUru kUDidAga uMTAguva parxNava: (viV.pA.koV. 43)}
 \ullekha{nirALada aSaTxdaLakamaladoLage... niraMjana\-parxNava, avAcayxparxNava, kalAparxNava... (savasaM. 6; uriliM. 1421-489); iMtapapx parxNamamaMtarxsaMbaMdhavanu... shiKArudArxkiSxge niraMjana avAcayxparxNavaveMba... (savasaM. 10; kADasi. 84-61); shAMtayxtiVtoVtatxrakale... avAcayxparxNavavAgidadxnayayx ilalxdaMte,... (savasaM. 13; bAlasaM. 384-178); idakekx niraMjana hakAraveMba hesaride. adu avAcayx-eMdare heVLalikekx bArada parxNamaveMdu vacanakAraru heVLutAtxre. alilx nAdavu divayx\-vAdadudx, biMduvu nirAvaraNavAdadudx matutx kaLeyu nirupama\-vAdadedxMdu heVLalapxDutatxde. iMtha ivu mUru kUDidalilx I avAcayxparxNamavAguvudu (shivAkoV. 137-182).}}
 \newmeaning{\ni{avAcayxparxNamaH na vakutxM yoVgayxH vAcayxH, na vAcayxH avAcayxH avAcayxshacx asw parxNamashacx - avAcayxparxNamaH}}
 \end{entry}
